source/files/kubernetes-logging-aggeration-using-efk/log-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-app
  labels:
    app: log-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      containers:
      - name: log-app
        image: kuops/log-example-app
        ports:
        - containerPort: 80
        volumeMounts:
        - name: log-dir
          mountPath: /data/log/log-app
          subPathExpr: $(NAMESPACE)/$(POD_NAME)
      volumes:
      - name: log-dir
        persistentVolumeClaim:
          claimName: log-app
